sam-internal/k8s-out/mvp/gsf-core-devmvp-sam2-sam/sherpa-injector-register-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    manifestctl.sam.data.sfdc.net/swagger: disable
  labels:
    app: sherpa-injector
    pcn: deploy
  name: sherpa-injector-cfg
webhooks:
- clientConfig:
    caBundle: IwojIFRISVMgRklMRSBJUyBGT1IgUFJPRFVDVElPTiBPTkxZCiMKIyBOT1RFOiBETyBOT1QgTEVBVkUgQU4gRU1QVFkgTElORSBBVCBUSEUgRU5EIE9GIFRISVMgRklMRQojCiMgVXNlOiBrZXl0b29sIC1wcmludGNlcnQgLXYgLWZpbGUgY2FjZXJ0cy5wZW0KIwojCiMgT3duZXI6IENOPXNhbGVzZm9yY2UuY29tIEludGVybmFsIFJvb3QgQ0EgMSwgTz0ic2FsZXNmb3JjZS5jb20sIGluYy4iLCBDPVVTCiMgSXNzdWVyOiBDTj1zYWxlc2ZvcmNlLmNvbSBJbnRlcm5hbCBSb290IENBIDEsIE89InNhbGVzZm9yY2UuY29tLCBpbmMuIiwgQz1VUwojIFNlcmlhbCBudW1iZXI6IGRhZDI4ZDg0M2ZjNzMzMjVkNGMxYTc1MjA3ZDRlNzQKIyBWYWxpZC [...]
    url: https://sherpa-injector.mesh-control-plane.svc.cluster.local:17442/mutate
  failurePolicy: Ignore
  name: sherpa-injector.service-mesh.svc
  namespaceSelector:
    matchExpressions:
    - key: sherpa-injector.service-mesh/inject
      operator: NotIn
      values:
      - disabled
  rules:
  - apiGroups:
    - apps
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
